@@ -1,3 +1,12 @@
+2003-12-18  Andrew H. Chatham <pyogg@andrewchatham.com>
+	* pyvorbisinfo.c: Incoporate John Morton's explanations about what
+	all those arguments mean. Now everything that takes a logical
+	stream index says so.
+
+	* pyvorbisinfo.c: Provide str() methods for VorbisComment and
+	VorbisInfo objects. Now they print out all pretty and stuff. Now
+	VorbisFile could still use one.
+	
 2003-09-08  Andrew H. Chatham <pyogg@andrewchatham.com>
 	* pyvorbisfile.c, pyvorbisinfo.c: Fix an exception leak (the
 	exceptions would show up later, even though things worked OK)
